bindings/pydrake/multibody/test/model_directives_to_sdformat_files/errors/deep_child_weld.error_regex
Found weld with deeply nested child frame \[top_level_model::robot1::robot_base\]. Welds with deeply nested childs are not suported.
